--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
 
   <name>Peergreen Security API</name>
 
+  <scm>
+    <connection>scm:git:https://forge.peergreen.com/git/git/security/security-api.git</connection>
+    <developerConnection>scm:git:https://forge.peergreen.com/git/git/security/security-api.git</developerConnection>
+    <url>https://forge.peergreen.com/git/summary/?r=security/security-api.git</url>
+    <tag>HEAD</tag>
+  </scm>
+
   <dependencies>
     <dependency>
       <groupId>biz.aQute</groupId>
@@ -62,5 +69,15 @@
       </plugin>
     </plugins>
   </build>
+
+  <repositories>
+    <repository>
+      <id>peergreen.release</id>
+      <name>Peergreen Release Nexus</name>
+      <url>https://forge.peergreen.com/nexus/content/repositories/releases/</url>
+      <releases><enabled>true</enabled></releases>
+      <snapshots><enabled>false</enabled></snapshots>
+    </repository>
+  </repositories>
 
 </project>
