--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <groupId>com.peergreen.security</groupId>
   <artifactId>security-api</artifactId>
   <packaging>bundle</packaging>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
 
   <name>Peergreen Security API</name>
 
@@ -32,7 +32,7 @@
     <connection>scm:git:https://forge.peergreen.com/git/git/security/security-api.git</connection>
     <developerConnection>scm:git:https://forge.peergreen.com/git/git/security/security-api.git</developerConnection>
     <url>https://forge.peergreen.com/git/summary/?r=security/security-api.git</url>
-    <tag>SECURITY_API_1_0_0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
